# advent_of_code

2023/: meson.build
2023/cpp/: meson.build
2023/cpp/src/01/: meson.build  trebuchet.cpp
2023/cpp/src/02/: cube.cpp  meson.build
2023/cpp/src/03/: gear_ratio.cpp  meson.build
2023/cpp/src/04/: meson.build  scratchcard.cpp
2023/cpp/src/05/: descriptor.cpp  descriptor_range.hpp  descriptor_range_transform.cpp  descriptor_range_transform.hpp  descriptor_set.cpp  descriptor_set.hpp  meson.build  seed.cpp  (+1 more)
cpp/: meson.build
cpp/2023/: meson.build
cpp/2023/src/01/: meson.build
cpp/2023/src/01/src/: trebuchet.cpp
cpp/2023/src/02/: meson.build
cpp/2023/src/02/src/: cube.cpp
cpp/2023/src/03/: meson.build
cpp/2023/src/03/src/: gear_ratio.cpp
cpp/2023/src/04/: meson.build
cpp/2023/src/04/src/: scratchcard.cpp
cpp/2023/src/05/: meson.build
cpp/2023/src/05/src/: almanac.cpp  almanac.hpp  descriptor.hpp  descriptor_range.cpp  descriptor_set_transform.cpp  descriptor_set_transform.hpp  seed.cpp  transform_result.cpp
cpp/2023/src/06/: meson.build
cpp/2023/src/06/src/: race.cpp
cpp/2023/src/07/: meson.build
cpp/2023/src/07/src/: camel.cpp  card.cpp  hand.cpp  hand.hpp
cpp/2023/src/08/: meson.build
cpp/2023/src/08/src/: cyclic_iterator.hpp  instruction.cpp  instruction.hpp  instruction_set.cpp  instruction_set.hpp  network.cpp  network.hpp  wasteland.cpp
cpp/2023/src/08/src/cycles/: cycle_finder.hpp  cyclic_iterator.hpp  cyclic_view.hpp
cpp/src/2023/01/: trebuchet.cpp
cpp/src/2023/02/: cube.cpp
cpp/src/2023/03/: gear_ratio.cpp
(+164 files in other folders)
