project(
  'advent_of_code',
  'cpp',
  version: '2023',
  license: 'MIT',
  default_options: ['cpp_std=c++23', 'warning_level=3']
)

executable('trebuchet', ['2023/src/01/src/trebuchet.cpp'])
executable('cube', ['2023/src/02/src/cube.cpp'])
executable('gear_ratio', ['2023/src/03/src/gear_ratio.cpp'])
executable('scratchcard', ['2023/src/04/src/scratchcard.cpp'])
executable('seed', ['2023/src/05/src/seed.cpp'])